--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
     <footer>
         <p>&copy; 2024 Art Gallery. All Rights Reserved.</p>
     </footer>
+
+    <button id="backToTop">↑</button>
+    
+    <script src="script.js" ></script>
     
 </body>
 </html>
